<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/gameLinearLayout">


    <ImageView
        android:id="@+id/birdImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/spacing"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter" />


    <LinearLayout
        android:id="@+id/rowLinearLayour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_answer1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/button_answer1"
            android:lines="2"
            android:text="" />

        <Button
            android:id="@+id/b_answer2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/button_answer2"
            android:lines="2"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_answer3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/button_answer3"
            android:lines="2"
            android:text="" />

        <Button
            android:id="@+id/b_answer4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/button_answer4"
            android:lines="2"
            android:text="" />
    </LinearLayout>

</LinearLayout>
